force-app/main/default/objects/Case/fields/Chassis_No__c.field-meta.xml
<CustomField>
    <fullName>Chassis_No__c</fullName>
    <formula>Contact.Chassis_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chassis No</label>
    <type>Text</type>
</CustomField>