force-app/main/default/objects/Case/fields/Chat_Key__c.field-meta.xml
<CustomField>
    <fullName>Chat_Key__c</fullName>
    <label>Chat Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>