force-app/main/default/objects/Case/fields/Check_Web_Email__c.field-meta.xml
<CustomField>
    <fullName>Check_Web_Email__c</fullName>
    <formula>!ISBLANK(SuppliedEmail)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Web Email</label>
    <type>Checkbox</type>
</CustomField>