force-app/main/default/objects/Case/fields/Chronological__c.field-meta.xml
<CustomField>
    <fullName>Chronological__c</fullName>
    <label>Chronological</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>