force-app/main/default/objects/Case/fields/CHS_Case_Range__c.field-meta.xml
<CustomField>
    <fullName>CHS_Case_Range__c</fullName>
    <formula>IF(Age__c &gt; 180 &amp;&amp; Age__c &lt;= 365, &quot;6 - 12 months&quot;,
IF(Age__c &gt; 90 &amp;&amp; Age__c &lt;= 180, &quot;3 - 6 months&quot;,
IF(Age__c &gt; 30 &amp;&amp; Age__c &lt; 90, &quot;&lt; 3 months&quot;,
IF(Age__c &gt; 14 &amp;&amp; Age__c &lt;= 30, &quot;&lt;= 30 days&quot;,
IF(Age__c &gt; 7 &amp;&amp; Age__c &lt;= 14, &quot;&lt;= 14 days&quot;,
IF(Age__c &gt; 3 &amp;&amp; Age__c &lt;= 7, &quot;&lt;= `7 days&quot;,
&quot;&lt;= `3 days&quot; ))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CHS Case Range</label>
    <type>Text</type>
</CustomField>