force-app/main/default/objects/Case/fields/CHS_Invalid__c.field-meta.xml
<CustomField>
    <fullName>CHS_Invalid__c</fullName>
    <formula>IF(TEXT(CHS_Status__c) == &apos;Closed - Invalid&apos;,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CHS Invalid</label>
    <type>Checkbox</type>
</CustomField>