force-app/main/default/objects/Case/fields/CHS_Others__c.field-meta.xml
<CustomField>
    <fullName>CHS_Others__c</fullName>
    <formula>IF(TEXT(CHS_Status__c) != &apos;Closed - Invalid&apos; &amp;&amp; TEXT(CHS_Status__c) != &apos;Closed - Valid&apos;,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CHS Others</label>
    <type>Checkbox</type>
</CustomField>