force-app/main/default/objects/Case/fields/CHS_Status__c.field-meta.xml
<CustomField>
    <fullName>CHS_Status__c</fullName>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Incomplete Information</fullName>
            </value>
            <value>
                <fullName>Revised</fullName>
            </value>
            <value>
                <fullName>In Progress CMU</fullName>
            </value>
            <value>
                <fullName>Assigned to Back Office</fullName>
            </value>
            <value>
                <fullName>In Progress Back Office</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Escalation Rejected</fullName>
            </value>
            <value>
                <fullName>Escalation Approved</fullName>
            </value>
            <value>
                <fullName>BOD Approval</fullName>
            </value>
            <value>
                <fullName>Closed - Invalid</fullName>
            </value>
            <value>
                <fullName>Closed - Valid</fullName>
            </value>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>