force-app/main/default/objects/Case/fields/CHS_Ticket__c.field-meta.xml
<CustomField>
    <fullName>CHS_Ticket__c</fullName>
    <label>CHS Ticket</label>
    <length>50</length>
    <type>Text</type>
</CustomField>