force-app/main/default/objects/Case/fields/CHS_Valid__c.field-meta.xml
<CustomField>
    <fullName>CHS_Valid__c</fullName>
    <formula>IF(TEXT(CHS_Status__c) == &apos;Closed - Valid&apos;,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CHS Valid</label>
    <type>Checkbox</type>
</CustomField>