force-app/main/default/objects/Case/fields/Claim_Head__c.field-meta.xml
<CustomField>
    <fullName>Claim_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ClaimHead</relationshipName>
    <type>Lookup</type>
</CustomField>