force-app/main/default/objects/Case/fields/CMU__c.field-meta.xml
<CustomField>
    <fullName>CMU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CMU</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CMU</relationshipName>
    <type>Lookup</type>
</CustomField>