force-app/main/default/objects/Case/fields/CMU_Agent__c.field-meta.xml
<CustomField>
    <fullName>CMU_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CMU Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CMUAgent</relationshipName>
    <type>Lookup</type>
</CustomField>