force-app/main/default/objects/Case/fields/COB__c.field-meta.xml
<CustomField>
    <fullName>COB__c</fullName>
    <label>COB</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ENGINEERING</fullName>
            </value>
            <value>
                <fullName>GENERAL ACCIDENT (PA)</fullName>
            </value>
            <value>
                <fullName>LIABILITY</fullName>
            </value>
            <value>
                <fullName>MARINE CARGO</fullName>
            </value>
            <value>
                <fullName>MARINE HULL</fullName>
            </value>
            <value>
                <fullName>MISCELLANEOUS (OTHERS)</fullName>
            </value>
            <value>
                <fullName>MOTOR VEHICLE</fullName>
            </value>
            <value>
                <fullName>PROPERTY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>