force-app/main/default/objects/Case/fields/Compensation_Payment__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Payment__c</fullName>
    <label>Compensation Payment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Invalid_Paid__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Business Consideration</fullName>
            </value>
            <value>
                <fullName>Sensitive Customer</fullName>
            </value>
            <value>
                <fullName>Build Relationship with Bank Mandiri</fullName>
            </value>
            <value>
                <fullName>Other (Freetext)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>