force-app/main/default/objects/Case/fields/Complain__c.field-meta.xml
<CustomField>
    <fullName>Complain__c</fullName>
    <formula>if(ISPICKVAL(Type, &apos;Complaint&apos;), &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complain</label>
    <type>Text</type>
</CustomField>