force-app/main/default/objects/Case/fields/Complaint__c.field-meta.xml
<CustomField>
    <fullName>Complaint__c</fullName>
    <label>Complaint</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Appeal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>