force-app/main/default/objects/Case/fields/Complaint_Closer_Name__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Closer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User for the requirement of &quot;CHS Complaint Log (AFI)&quot; report. The value is filled via trigger &apos;GetCHSCurrentAssignee&apos;</description>
    <label>Complaint Closer Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases7</relationshipName>
    <type>Lookup</type>
</CustomField>