force-app/main/default/objects/Case/fields/Complaint_Decision__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Decision__c</fullName>
    <label>Complaint Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>