force-app/main/default/objects/Case/fields/Complaint_Decision_AMFS__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Decision_AMFS__c</fullName>
    <label>Complaint Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invalid &amp; Reject</fullName>
            </value>
            <value>
                <fullName>Invalid &amp; Paid</fullName>
            </value>
            <value>
                <fullName>Approve &amp; Paid</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Drop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>