force-app/main/default/objects/Case/fields/Complaint_Description__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Description__c</fullName>
    <label>Complaint Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST 1</fullName>
            </value>
            <value>
                <fullName>TEST 2</fullName>
            </value>
            <value>
                <fullName>TEST 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>