force-app/main/default/objects/Case/fields/Complaint_Recordtype_ID__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Recordtype_ID__c</fullName>
    <formula>IF(TEXT(Entity_Backup__c) = &apos;ALI&apos;, &apos;0126F000001MIGJQA4&apos;,
IF(Entity__c = &apos;AFI&apos;, &apos;01290000000mOgY&apos;,
IF(Entity__c = &apos;AMFS&apos;, &apos;01290000000msDD&apos;,
&apos;01290000000msDN&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Recordtype ID</label>
    <type>Text</type>
</CustomField>