force-app/main/default/objects/Case/fields/Complaint_Resume__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Resume__c</fullName>
    <label>Complaint Resume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>