force-app/main/default/objects/Case/fields/Complaint_type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_type__c</fullName>
    <label>Complaint type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complex Case</fullName>
            </value>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Priority</fullName>
            </value>
            <value>
                <fullName>Potensial Complaint (MAGI)</fullName>
            </value>
            <value>
                <fullName>Potential Complaint</fullName>
            </value>
            <value>
                <fullName>Soft Complaint</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>