force-app/main/default/objects/Case/fields/Complaint_Type_AGI__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type_AGI__c</fullName>
    <label>Complaint Type AGI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Complex Case</fullName>
            </value>
            <value>
                <fullName>Priority</fullName>
            </value>
            <value>
                <fullName>Potensial Complaint (AGI)</fullName>
            </value>
            <value>
                <fullName>Soft Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>