force-app/main/default/objects/Case/fields/Complaint_Validity__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Validity__c</fullName>
    <label>Complaint Validity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Error__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Invalid FA non-active</fullName>
            </value>
            <value>
                <fullName>Invalid Hard to Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>