force-app/main/default/objects/Case/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Used for CHS report (CHS Complaint Log)</description>
    <formula>DATEVALUE(ClosedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>