force-app/main/default/objects/Case/fields/Conclusion__c.field-meta.xml
<CustomField>
    <fullName>Conclusion__c</fullName>
    <label>Conclusion</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>