force-app/main/default/objects/Case/fields/Count_All_Email_No_Respond_ALI__c.field-meta.xml
<CustomField>
    <fullName>Count_All_Email_No_Respond_ALI__c</fullName>
    <formula>Count_All_Incoming_Email_ALI__c -  Count_All_Email_Respond_ALI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Email No Respond ALI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>