force-app/main/default/objects/Case/fields/Count_All_Email_Pick_Up_ALI__c.field-meta.xml
<CustomField>
    <fullName>Count_All_Email_Pick_Up_ALI__c</fullName>
    <formula>IF( TEXT(Entity_Backup__c)==&apos;ALI&apos; &amp;&amp; TEXT(Origin )==&apos;Email&apos; &amp;&amp;  NOT(ISBLANK(Owner_Profile_Name__c)) ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Email Pick Up ALI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>