force-app/main/default/objects/Case/fields/Count_All_Incoming_Email_ALI__c.field-meta.xml
<CustomField>
    <fullName>Count_All_Incoming_Email_ALI__c</fullName>
    <formula>IF( TEXT(Entity_Backup__c)==&apos;ALI&apos; &amp;&amp; TEXT( Origin )==&apos;Email&apos;,1,0)</formula>
    <label>Count Email Incoming  ALI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>