force-app/main/default/objects/Case/fields/Count_Case__c.field-meta.xml
<CustomField>
    <fullName>Count_Case__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>