force-app/main/default/objects/Case/fields/Count_Email_Escalation_Agent_ALI__c.field-meta.xml
<CustomField>
    <fullName>Count_Email_Escalation_Agent_ALI__c</fullName>
    <description>IF( TEXT(Entity_Backup__c)==&apos;ALI&apos; &amp;&amp; TEXT(Parent.Origin )==&apos;Email&apos; &amp;&amp; CONTAINS(CreatedBy.Profile.Name , &apos;ALI&apos;) &amp;&amp; CONTAINS(CreatedBy.Profile.Name , &apos;Agent&apos;) ,1,0)</description>
    <formula>IF( TEXT(Entity_Backup__c)==&apos;ALI&apos; &amp;&amp; TEXT(Origin )==&apos;Email&apos; &amp;&amp; TEXT(Status) == &apos;Escalated&apos; ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Email Escalation Agent ALI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>