force-app/main/default/objects/Case/fields/Count_Email_No_Respond_ALI_SPV__c.field-meta.xml
<CustomField>
    <fullName>Count_Email_No_Respond_ALI_SPV__c</fullName>
    <formula>IF( TEXT(Entity_Backup__c)==&apos;ALI&apos; &amp;&amp; TEXT(Origin )==&apos;Email&apos; &amp;&amp; CONTAINS(Owner_Profile_Name__c , &apos;ALI&apos;) &amp;&amp; (CONTAINS(Owner_Profile_Name__c , &apos;Supervisor&apos;) || CONTAINS(Owner_Profile_Name__c , &apos;SPV&apos;)) &amp;&amp; TEXT(Count_All_Email_Pick_Up_SPV_ALI__c)==&apos;1&apos; ,Count_All_Incoming_Email_ALI__c -Count_Email_Respond_SPV_ALI__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Email No Respond SPV ALI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>