force-app/main/default/objects/Case/fields/Count_Email_Pick_Up_Agent_ALI__c.field-meta.xml
<CustomField>
    <fullName>Count_Email_Pick_Up_Agent_ALI__c</fullName>
    <formula>IF( TEXT(Entity_Backup__c)==&apos;ALI&apos; &amp;&amp; TEXT(Origin )==&apos;Email&apos; &amp;&amp; CONTAINS(Owner_Profile_Name__c , &apos;ALI&apos;) &amp;&amp; CONTAINS(Owner_Profile_Name__c , &apos;Agent&apos;)  ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Email Pick Up Agent ALI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>