force-app/main/default/objects/Case/fields/Count_Email_Respond_SPV_ALI__c.field-meta.xml
<CustomField>
    <fullName>Count_Email_Respond_SPV_ALI__c</fullName>
    <formula>IF( TEXT(Entity_Backup__c)==&apos;ALI&apos; &amp;&amp; TEXT(Origin )==&apos;Email&apos; &amp;&amp; CONTAINS(CreatedBy.Profile.Name , &apos;ALI&apos;) &amp;&amp; (CONTAINS(CreatedBy.Profile.Name , &apos;SPV&apos;) || CONTAINS(CreatedBy.Profile.Name , &apos;Supervisor&apos;)) ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Email Respond SPV ALI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>