force-app/main/default/objects/Case/fields/Count_Policy_No__c.field-meta.xml
<CustomField>
    <fullName>Count_Policy_No__c</fullName>
    <formula>Len(Trim(Policy_Numbers__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Policy No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>