force-app/main/default/objects/Case/fields/Count_Repeat_Call__c.field-meta.xml
<CustomField>
    <fullName>Count_Repeat_Call__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count Repeat Call</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>