force-app/main/default/objects/Case/fields/Courier__c.field-meta.xml
<CustomField>
    <fullName>Courier__c</fullName>
    <label>Courier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KGP</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>JNE</fullName>
            </value>
            <value>
                <fullName>NCS</fullName>
                <isActive>false</isActive>
                <label>NCS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>