force-app/main/default/objects/Case/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <inlineHelpText>Coverage untuk MV</inlineHelpText>
    <label>Coverage (MV)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comprehensive</fullName>
            </value>
            <value>
                <fullName>Total Loss Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>