force-app/main/default/objects/Case/fields/Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Create_Date__c</fullName>
    <formula>DATE( YEAR(DATEVALUE(CreatedDate)) ,month(DATEVALUE(CreatedDate)),day(DATEVALUE(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Date</label>
    <type>Date</type>
</CustomField>