force-app/main/default/objects/Case/fields/Created_Out_Of_Office_Hour__c.field-meta.xml
<CustomField>
    <fullName>Created_Out_Of_Office_Hour__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created Out Of Office Hour</label>
    <type>Checkbox</type>
</CustomField>