force-app/main/default/objects/Case/fields/CSTDAT__c.field-meta.xml
<CustomField>
    <fullName>CSTDAT__c</fullName>
    <formula>VALUE(TEXT(YEAR(TS_Period_From__c ))+LPAD(TEXT(MONTH(TS_Period_From__c )),2,&apos;0&apos;)+LPAD(TEXT(DAY(TS_Period_From__c )),2,&apos;0&apos;))</formula>
    <label>CSTDAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>