force-app/main/default/objects/Case/fields/Current_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Current_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in &quot;CHS Complaint Log (AMFS)&quot; report</description>
    <label>Current Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases6</relationshipName>
    <type>Lookup</type>
</CustomField>