force-app/main/default/objects/Case/fields/Cust_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Cust_Segmentation__c</fullName>
    <inlineHelpText>Customer Segmentation for AMFS Only</inlineHelpText>
    <label>Cust Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cust_Segmentation</valueSetName>
    </valueSet>
</CustomField>