force-app/main/default/objects/Case/fields/Customer_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Expectation__c</fullName>
    <label>Customer Expectation</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>