force-app/main/default/objects/Case/fields/Customer_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Explanation__c</fullName>
    <label>Customer Explanation</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>