force-app/main/default/objects/Case/fields/Customer_Level__c.field-meta.xml
<CustomField>
    <fullName>Customer_Level__c</fullName>
    <label>Customer Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>