force-app/main/default/objects/Case/fields/Customer_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signature_Date__c</fullName>
    <label>Customer Signature Date</label>
    <type>Date</type>
</CustomField>