force-app/main/default/objects/Case/fields/Customer_type__c.field-meta.xml
<CustomField>
    <fullName>Customer_type__c</fullName>
    <label>Customer type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Priority</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Priority Banking Customer</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Mandiri Visa</fullName>
            </value>
            <value>
                <fullName>Sensitive Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>