force-app/main/default/objects/Case/fields/Date_Of_Deal__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Deal__c</fullName>
    <label>Date Of Deal</label>
    <type>Date</type>
</CustomField>