force-app/main/default/objects/Case/fields/Date_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Incident__c</fullName>
    <formula>Contact.Date_of_Accident__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Incident</label>
    <type>Date</type>
</CustomField>