force-app/main/default/objects/Case/fields/Date_of_Submit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Submit__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date of Submit</label>
    <type>Date</type>
</CustomField>