force-app/main/default/objects/Case/fields/Date_Off_Call__c.field-meta.xml
<CustomField>
    <fullName>Date_Off_Call__c</fullName>
    <label>Date Off Call</label>
    <type>Date</type>
</CustomField>