force-app/main/default/objects/Case/fields/Date_Time_Open__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Open__c</fullName>
    <label>Date/Time Open</label>
    <type>DateTime</type>
</CustomField>